--- a/intro/3d/orthographic3d/index.html
+++ b/intro/3d/orthographic3d/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Orthographic 3d</title>
+    <title>3D with perspective</title>
     <link type="text/css" rel="stylesheet" href="css/webgl.css" />
 </head>
 
@@ -11,6 +11,7 @@
     <canvas id="canvas"></canvas>
     <div id="uiContainer">
         <div id="ui">
+            <div id="fieldOfView"></div>
             <div id="x"></div>
             <div id="y"></div>
             <div id="z"></div>
